--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,4 @@
 body {
-    width:62%;
     margin: 0 auto;
     font-family: sans-serif;
 }
@@ -9,15 +8,41 @@ header {
 }
 
 nav {
-    background-color: #F5F5F5;
+    width: 100%;
+    height: 128px;
+    background-color: #eee;
+    margin-top: 1em;
+    padding: 2em 3em;
+}
+
+nav li, footer li {
+    float: left;
 }
 
 h1 {
-    color:black;
-    font-size: 2em;
+    color: black;
+    font-size: 2.5em;
     font-weight: bold;
+    letter-spacing: -0.05em;
+}
+
+h2 {
+    font-size:1.4em;
+    font-weight:normal;
 }
 
 p {
     color: grey;
+    line-height: 1.4;
+}
+
+footer {
+    color: #C8C8C8;
+    font-size: 0.8em;
+    background-color: #404040;
+    padding: 1em 3em 15em 3em;
+}
+
+a {
+    text-decoration: none;
 }
