--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,4 @@
 body {
-    margin: 0 auto;
     font-family: sans-serif;
 }
 
@@ -7,42 +6,69 @@ header {
     margin-top: 3em;
 }
 
+.contwrap, .navlist {
+    width: 80%;
+    max-width: 1024px;
+    margin: 0 auto;
+}
+
+a {
+    text-decoration: none;
+}
+/* navigation start */
+
 nav {
-    width: 100%;
-    height: 128px;
-    background-color: #eee;
+    height: 96px;
+    background-color: #F5F5F5;
     margin-top: 1em;
-    padding: 2em 3em;
+    font-weight: 300;
+    letter-spacing: .02em;
+}
+
+.navlist {
+    list-style: none;
 }
 
 nav li, footer li {
     float: left;
 }
 
+nav li {
+    padding: 2.4em;
+    border-left: 1px solid grey;
+    height: 100%;
+}
+
+nav li:hover {
+    background: #404040;
+}
+
+/* navigation end */
+
+h1, h2, nav {
+    font-family: "metronic slab", Arial, Helvetica, sans-serif;
+}
+
 h1 {
     color: black;
     font-size: 2.5em;
     font-weight: bold;
-    letter-spacing: -0.05em;
 }
 
 h2 {
     font-size:1.4em;
-    font-weight:normal;
+    font-weight: 300;
+    color:#36B6AA;
 }
 
 p {
-    color: grey;
-    line-height: 1.4;
+    color: #646464;
+    line-height: 1.3;
 }
 
 footer {
     color: #C8C8C8;
     font-size: 0.8em;
-    background-color: #404040;
+    background-color: #343653;
     padding: 1em 3em 15em 3em;
-}
-
-a {
-    text-decoration: none;
 }
